# T5

./: Makefile  README.md  double_linked_list.c  double_linked_list.h
untitled13/: CMakeLists.txt  double_linked_list.c  double_linked_list.h  main.c
